commit with all fucntionalities

--- a/src/products.html
+++ b/src/products.html
@@ -23,7 +23,7 @@
 		<div id="products">
 			
 		</div>
-		<div id="cart"></div>
+		<div id="cart">Uhhooo!! Your Cart is Empty!!</div>
 	</div>
 	<div id="footer">
 		<nav>
